# robo-amr

./: .gitattributes  .gitignore  Aula do Software  NOTICE.md  README.md  ROADMAP.md  STATE_OF_PROJECT.md  THIRD_PARTY_LICENSES.md  aliases.bash  install_ros2_jazzy.sh  install_ros2_stack.sh  setup.bash  setup_master.sh  start_amr_gui.sh  start_gui.sh  start_gui_nvidia.sh  start_rbot_slam.sh  xorg-nvidia-headless.conf
amr_pallet/scripts/: gz_pose_bridge.py
amr_pallet/src/amr_pallet/: package.xml  setup.cfg  setup.py
amr_pallet/src/amr_pallet/amr_pallet/: logistics_mission.py  robot_sim.py
amr_pallet/src/amr_pallet/config/: nav2_params.yaml
amr_pallet/src/amr_pallet/launch/: warehouse.launch.py
amr_pallet/src/amr_pallet/maps/: galp_amr.pgm  galp_amr.yaml  warehouse.pgm  warehouse.yaml
amr_pallet/src/amr_pallet/models/amr_viz/: model.config  model.sdf
amr_pallet/src/amr_pallet/worlds/: galp_amr.world
didatico/: control_panel.py  friendly_logger.py  mission_step.py  start_didatico.sh
didatico/worlds/: small_warehouse_slow.sdf
docs/: ARCHITECTURE.md  CODE_GUIDE.md  COMO_O_ROBO_ANDA_1_METRO.md  DESAFIO_1.1_SLAM.md  ESTUDO_DIDATICO.md  ESTUDO_DIDATICO.md.backup_20260519  ESTUDO_DIDATICO.md.backup_20260519_2302  HARDWARE_ANATOMY.md  ONBOARDING.md  PLANO_APRENDIZADO_EXPERT.md  PROCEDIMENTO_INICIALIZACAO.md  RBOT_ANALYSIS.md  RESUMOS_RAPIDOS.md  ROBOT_ANALYSIS.md  SETUP_CLAUDE_CODE.md  SLAM_GALP_MAPPING.md
docs/diagramas/: README.md
maps/: galpao_nav.pgm  galpao_nav.yaml  small_warehouse_france.pgm  small_warehouse_france.yaml
nav_test/install/: local_setup.sh  setup.sh
nav_test/install/nav_test/lib/nav_test/: navigator  robot_sim
nav_test/install/nav_test/share/nav_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
nav_test/install/nav_test/share/nav_test/config/: nav2_params.yaml
nav_test/install/nav_test/share/nav_test/launch/: demo.launch.py
nav_test/install/nav_test/share/nav_test/maps/: free_space.pgm
nav_test/log/: latest_build
nav_test/src/nav_test/: setup.py
nav_test/src/nav_test/maps/: free_space.yaml
nav_test/src/nav_test/nav_test/: navigator.py  robot_sim.py
patches/: README.md  rbot-depth-camera-10hz.patch
scripts/: generate_apriltag_textures.py  generate_galp_slam_candidate.sh  start_nav2_stack.sh
src/rbot/: LICENSE
src/rbot/bringup/rlai_bringup/: package.xml  setup.cfg  setup.py
src/rbot/bringup/rlai_bringup/launch/: simulation.launch.py
src/rbot/control/rlai_control/: CMakeLists.txt  package.xml
src/rbot/control/rlai_control/config/: controllers.yaml  velocity_smoother.yaml
src/rbot/control/rlai_control/launch/: control.launch.py
src/rbot/control/rlai_teleop/: package.xml  setup.cfg  setup.py
src/rbot/control/rlai_teleop/config/: joystick.yaml
src/rbot/control/rlai_teleop/launch/: teleop.launch.py
src/rbot/control/rlai_teleop/rlai_teleop/: __init__.py  estop_node.py
src/rbot/localization/rlai_localization/: package.xml  setup.cfg  setup.py
src/rbot/localization/rlai_localization/config/: amcl.yaml  ekf.yaml  imu_filter.yaml
src/rbot/localization/rlai_localization/launch/: localization.launch.py  localization_amcl.launch.py
src/rbot/mapping/rlai_mapping/: package.xml  setup.cfg  setup.py
src/rbot/mapping/rlai_mapping/config/: map_server.yaml  slam_toolbox_lifelong.yaml  slam_toolbox_online_async.yaml
src/rbot/mapping/rlai_mapping/launch/: map_server.launch.py  mapping.launch.py
src/rbot/mapping/rlai_mapping/rviz/: mapping.rviz
src/rbot/missions/rlai_logistics/: README.md  package.xml  setup.cfg  setup.py
src/rbot/missions/rlai_logistics/config/: galp_waypoints.yaml
src/rbot/missions/rlai_logistics/launch/: logistics_mission.launch.py
src/rbot/navigation/rlai_navigation/: package.xml  setup.cfg  setup.py
src/rbot/perception/rlai_apriltag/: README.md  package.xml  setup.cfg  setup.py
src/rbot/perception/rlai_apriltag/config/: pallet_tags_36h11.yaml
src/rbot/perception/rlai_apriltag/launch/: pallet_apriltag.launch.py
src/rbot/perception/rlai_camera_processing/: CMakeLists.txt  package.xml
src/rbot/perception/rlai_camera_processing/config/: stereo_params.yaml
src/rbot/perception/rlai_camera_processing/launch/: camera_processing.launch.py
src/rbot/perception/rlai_lidar_processing/: CMakeLists.txt  package.xml
src/rbot/perception/rlai_lidar_processing/config/: pointcloud_filter.yaml
src/rbot/perception/rlai_lidar_processing/launch/: lidar_processing.launch.py
src/rbot/perception/rlai_lidar_processing/src/: pointcloud_filter_node.cpp
src/rbot/robot/rlai_description/: CMakeLists.txt  package.xml
src/rbot/robot/rlai_description/usd/: README.md
src/rbot/robot/rlai_meshes/: CMakeLists.txt  package.xml
src/rbot/robot/rlai_meshes/meshes/: chassis.stl  depth_camera_housing.stl  depth_camera_lens.stl  logo_ai.stl  logo_robolabs.stl  payload_platform.stl  wheel.stl  wheel_cap.stl
src/rbot/simulation/rlai_gazebo/: CMakeLists.txt  package.xml
src/rbot/simulation/rlai_gazebo/config/: ros_gz_bridge.yaml
src/rbot/simulation/rlai_gazebo/launch/: gazebo.launch.py  spawn_robot.launch.py
src/rbot/simulation/rlai_gazebo/models/: README.md
src/rbot/simulation/rlai_gazebo/models/pallet_tags/: model.config  model.sdf
src/rbot/simulation/rlai_gazebo/rviz/: gazebo_live.rviz
src/rbot/simulation/rlai_gazebo/worlds/: empty.sdf  galp_amr.sdf  galp_amr_attach.sdf  large_warehouse.sdf  office_floor.sdf  outdoor_courtyard.sdf  small_warehouse.sdf
src/rbot/simulation/rlai_isaac/: package.xml  setup.cfg  setup.py
src/rbot/simulation/rlai_isaac/rlai_isaac/: __init__.py
src/rbot/utils/rlai_utils/: package.xml  setup.cfg  setup.py
tb3_nav_demo/install/: local_setup.sh  setup.sh
tb3_nav_demo/log/: latest_build
tb3_nav_demo/src/tb3_waypoint_nav/: package.xml  setup.cfg  setup.py
tb3_nav_demo/src/tb3_waypoint_nav/config/: waypoints.yaml
tb3_nav_demo/src/tb3_waypoint_nav/launch/: demo.launch.py
tb3_nav_demo/src/tb3_waypoint_nav/tb3_waypoint_nav/: robot_sim.py
tb3_nav_demo/src/tb3_waypoint_nav/test/: integration_headless.py  test_waypoints.py
(+40 files in other folders)
