<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rlai_bringup</name>
  <version>0.1.0</version>
  <description>Top-level simulation bringup — orchestrates all rbot packages</description>
  <maintainer email="contact@robolabs.ai">Robolabs AI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rlai_description</exec_depend>
  <exec_depend>rlai_gazebo</exec_depend>
  <exec_depend>rlai_control</exec_depend>
  <exec_depend>rlai_camera_processing</exec_depend>
  <exec_depend>rlai_localization</exec_depend>
  <exec_depend>rlai_mapping</exec_depend>
  <exec_depend>rlai_navigation</exec_depend>
  <exec_depend>rlai_teleop</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
