<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rlai_control</name>
  <version>0.1.0</version>
  <description>ros2_control configuration and controller YAML for rbot</description>
  <maintainer email="contact@robolabs.ai">Robolabs AI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
