<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rlai_meshes</name>
  <version>0.1.0</version>
  <description>STL and DAE mesh assets for rbot AMR (no runtime dependencies)</description>
  <maintainer email="contact@robolabs.ai">Robolabs AI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
